# devops-starter

./: .bazelrc  .gitignore  .golangci.yml  .goreleaser.yaml  .mise.toml  .pre-commit-config.yaml  ARCHITECTURE.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  Makefile  README.md  go.mod  go.sum  opencode.json  release-please-config.json
.github/workflows/: ci.yml  e2e.yml  pr-title.yml  release.yml  version-check.yml
.opencode/skills/add-tool/: SKILL.md
.opencode/skills/add-tool-group/: SKILL.md
.opencode/skills/toggle-group/: SKILL.md
bazel/: BUILD.bazel  go_release.bzl  shellcheck.bzl
bazel/macros/: BUILD.bazel  platforms.bzl  test_image.bzl
bazel/rules/: BUILD.bazel  actionlint.bzl  golangci_lint.bzl  goreleaser.bzl  yamllint.bzl
cmd/check-versions/: BUILD.bazel  main.go  main_test.go
cmd/devops-starter/: BUILD.bazel  main.go
cmd/generate-coverage-badge/: BUILD.bazel  main.go  main_test.go
cmd/mcp-server/: main.go
configs/: BUILD.bazel  default.yaml
docs/: code-architecture-interactions.excalidraw  mcp-server.md  setup.md
dotfiles/: BUILD.bazel
dotfiles/bash/: .bash_profile  .bashrc
dotfiles/git/: .gitconfig  .gitignore_global
dotfiles/nvim/: init.lua
dotfiles/nvim/lua/: options.lua  plugins.lua
dotfiles/shared/: aliases.sh  env.sh  functions.sh
dotfiles/starship/: starship.toml
dotfiles/tmux/: .tmux.conf
dotfiles/zsh/: .zprofile  .zshrc
internal/cli/: BUILD.bazel  adopt.go  adopt_test.go  config_cmd.go  config_cmd_test.go  confirm.go  deps.go  doctor.go  doctor_test.go  dotfiles.go  dotfiles_test.go  install.go  install_test.go  list.go  list_test.go  packages.go  plugins.go  remove.go  remove_test.go  root.go  setup.go  setup_integration_test.go  setup_test.go  status.go  status_test.go  testutil_test.go  version.go
internal/config/: BUILD.bazel  config.go  config_test.go
internal/dotfiles/: BUILD.bazel  linker.go  linker_test.go
internal/installer/: BUILD.bazel  archive.go  bootstrap.go  checksum.go  conflict.go  conflict_test.go  eget.go  eget_test.go  installer.go  installer_e2e_test.go  installer_test.go  link.go  link_test.go  progress.go  progress_test.go  url.go
internal/mcp/: helpers.go  helpers_test.go  resources.go  resources_test.go  server.go  server_test.go  server_utils_test.go  tools.go  tools_test.go
internal/mise/: BUILD.bazel  mise.go  mise_test.go
internal/pkgmgr/: BUILD.bazel  manager.go  manager_test.go  npm.go  pip.go
internal/platform/: BUILD.bazel  deps.go  detect.go  detect_test.go
internal/registry/: BUILD.bazel  ai.go  ansible.go  cloud.go  containers.go  infra.go  kubernetes.go  languages.go  package_managers.go  plugins.go  plugins_test.go  registry.go  registry_test.go  rust_tools.go  utilities.go
internal/state/: BUILD.bazel  detect.go  detect_test.go  state.go  state_test.go  store.go  store_test.go
internal/tui/: BUILD.bazel  commands.go  dev_version.go  model.go  setup.go  setup_test.go  table.go  tui_test.go  update.go  view.go
internal/updater/: BUILD.bazel  rewrite.go  selfupdate.go  selfupdate_test.go  updater.go  updater_test.go
oci/: BUILD.bazel
pkg/tooldef/: BUILD.bazel  tool.go  tool_test.go
scripts/: generate-coverage-badge.sh  genhtml.sh  install.sh
tests/e2e/: Dockerfile
tests/e2e/cmd/verify/: BUILD.bazel  main.go  main_test.go
