load("@gazelle//:def.bzl", "gazelle")
load("//bazel/rules:actionlint.bzl", "actionlint_test")
load("//bazel/rules:golangci_lint.bzl", "golangci_lint_test")
load("//bazel/rules:shellcheck.bzl", "shellcheck_test")
load("//bazel/rules:yamllint.bzl", "yamllint_test")

# gazelle:prefix github.com/omargallob/devops-starter
gazelle(name = "gazelle")

# Lint all shell scripts in the repo
shellcheck_test(
    name = "shellcheck",
    srcs = [
        "scripts/install.sh",
    ] + ["//dotfiles:shell_scripts"],
)

# Lint all Go code with golangci-lint
golangci_lint_test(
    name = "golangci_lint",
    config = ".golangci.yml",
    paths = [
        "./cmd/...",
        "./internal/...",
        "./pkg/...",
    ],
    tags = ["local"],
)

# Lint all YAML files
filegroup(
    name = "github_workflows",
    srcs = glob([
        ".github/workflows/*.yml",
    ]),
)

filegroup(
    name = "root_yaml_files",
    srcs = glob([
        ".*.yaml",
    ]),
)

yamllint_test(
    name = "yamllint",
    srcs = [
        ":github_workflows",
        ":root_yaml_files",
        "//configs:default.yaml",
    ],
    config = ".yamllint.yaml",
)

# Lint GitHub Actions workflow files
actionlint_test(
    name = "actionlint",
    srcs = [":github_workflows"],
    tags = ["local"],
)
