module(
    name = "devops_starter",
    version = "0.1.0",
)

# ─── Go ───────────────────────────────────────────────────────────────────────
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# ─── OCI (container images for integration testing) ──────────────────────────
bazel_dep(name = "rules_oci", version = "2.3.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "ubuntu_base",
    image = "index.docker.io/library/ubuntu",
    tag = "24.04",
    platforms = ["linux/amd64", "linux/arm64"],
)

oci.pull(
    name = "archlinux_base",
    image = "docker.io/archlinux/archlinux",
    tag = "latest",
    platforms = ["linux/amd64"],
)

use_repo(oci, "ubuntu_base", "archlinux_base")

# ─── Platforms ───────────────────────────────────────────────────────────────
bazel_dep(name = "platforms", version = "0.0.10")
