module(
    name = "devops_starter",
    version = "0.1.0",
)

# ─── Go ───────────────────────────────────────────────────────────────────────
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_charmbracelet_lipgloss", "com_github_schollz_progressbar_v3", "com_github_spf13_cobra", "in_gopkg_yaml_v3")

# ─── Container Images (integration testing) ──────────────────────────────────
bazel_dep(name = "rules_img", version = "0.3.11")

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "ubuntu_base",
    registry = "index.docker.io",
    repository = "library/ubuntu",
    tag = "24.04",
    layer_handling = "eager",
    unsafe_allow_tag_without_digest = True,
)

pull(
    name = "archlinux_base",
    registry = "index.docker.io",
    repository = "archlinux/archlinux",
    tag = "latest",
    layer_handling = "eager",
    unsafe_allow_tag_without_digest = True,
)

# ─── Platforms ───────────────────────────────────────────────────────────────
bazel_dep(name = "platforms", version = "1.0.0")
