load("//bazel/macros:test_image.bzl", "test_image")

# ─── Ubuntu Test Image ───────────────────────────────────────────────────────
test_image(
    name = "ubuntu_test",
    base = "@ubuntu_base",
    binary = "//cmd/devops-starter",
    repo_tag = "devops-starter:ubuntu-test",
)

# ─── Arch Linux Test Image ───────────────────────────────────────────────────
test_image(
    name = "arch_test",
    base = "@archlinux_base",
    binary = "//cmd/devops-starter",
    repo_tag = "devops-starter:arch-test",
)
