load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "check-versions_lib",
    srcs = ["main.go"],
    importpath = "github.com/omargallob/devops-starter/cmd/check-versions",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/registry",
        "//internal/updater",
    ],
)

go_binary(
    name = "check-versions",
    embed = [":check-versions_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "check-versions_test",
    srcs = ["main_test.go"],
    embed = [":check-versions_lib"],
)
