load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "generate-coverage-badge_lib",
    srcs = ["main.go"],
    importpath = "github.com/omargallob/devops-starter/cmd/generate-coverage-badge",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "generate-coverage-badge",
    embed = [":generate-coverage-badge_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "generate-coverage-badge_test",
    srcs = ["main_test.go"],
    embed = [":generate-coverage-badge_lib"],
)
