load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cli",
    srcs = [
        "adopt.go",
        "config_cmd.go",
        "confirm.go",
        "deps.go",
        "doctor.go",
        "dotfiles.go",
        "install.go",
        "list.go",
        "packages.go",
        "plugins.go",
        "remove.go",
        "root.go",
        "setup.go",
        "status.go",
        "version.go",
    ],
    importpath = "github.com/omargallob/devops-starter/internal/cli",
    visibility = [
        "//cmd:__subpackages__",
        "//internal:__subpackages__",
    ],
    deps = [
        "//internal/config",
        "//internal/dotfiles",
        "//internal/installer",
        "//internal/mise",
        "//internal/pkgmgr",
        "//internal/platform",
        "//internal/registry",
        "//internal/state",
        "//internal/tui",
        "//pkg/tooldef",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_spf13_cobra//:cobra",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "cli_test",
    srcs = [
        "adopt_test.go",
        "config_cmd_test.go",
        "doctor_test.go",
        "dotfiles_test.go",
        "install_test.go",
        "list_test.go",
        "remove_test.go",
        "setup_test.go",
        "status_test.go",
        "testutil_test.go",
    ],
    embed = [":cli"],
    deps = [
        "//internal/config",
        "//internal/platform",
        "//internal/state",
        "//pkg/tooldef",
        "@com_github_spf13_cobra//:cobra",
    ],
)
