load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "installer",
    srcs = [
        "archive.go",
        "checksum.go",
        "installer.go",
        "progress.go",
        "url.go",
    ],
    importpath = "github.com/omargallob/devops-starter/internal/installer",
    visibility = [
        "//cmd:__subpackages__",
        "//internal:__subpackages__",
    ],
    deps = [
        "//internal/state",
        "//pkg/tooldef",
        "@com_github_schollz_progressbar_v3//:progressbar",
    ],
)

go_test(
    name = "installer_test",
    srcs = ["installer_test.go"],
    embed = [":installer"],
    deps = [
        "//pkg/tooldef",
    ],
)
