load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "installer",
    srcs = [
        "archive.go",
        "bootstrap.go",
        "checksum.go",
        "conflict.go",
        "eget.go",
        "installer.go",
        "link.go",
        "progress.go",
        "url.go",
    ],
    importpath = "github.com/omargallob/devops-starter/internal/installer",
    visibility = [
        "//cmd:__subpackages__",
        "//internal:__subpackages__",
    ],
    deps = [
        "//internal/config",
        "//internal/state",
        "//pkg/tooldef",
        "@com_github_schollz_progressbar_v3//:progressbar",
    ],
)

go_test(
    name = "installer_test",
    srcs = [
        "conflict_test.go",
        "eget_test.go",
        "installer_e2e_test.go",
        "installer_test.go",
        "link_test.go",
        "progress_test.go",
    ],
    embed = [":installer"],
    deps = [
        "//internal/config",
        "//internal/state",
        "//pkg/tooldef",
    ],
)
