load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mise",
    srcs = ["mise.go"],
    importpath = "github.com/omargallob/devops-starter/internal/mise",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_burntsushi_toml//:toml",
    ],
)

go_test(
    name = "mise_test",
    srcs = ["mise_test.go"],
    embed = [":mise"],
)
