load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pkgmgr",
    srcs = [
        "manager.go",
        "npm.go",
        "pip.go",
    ],
    importpath = "github.com/omargallob/devops-starter/internal/pkgmgr",
    visibility = [
        "//cmd:__subpackages__",
        "//internal:__subpackages__",
    ],
)

go_test(
    name = "pkgmgr_test",
    srcs = ["manager_test.go"],
    embed = [":pkgmgr"],
)
