load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tui",
    srcs = [
        "commands.go",
        "dev_version.go",
        "model.go",
        "setup.go",
        "table.go",
        "update.go",
        "view.go",
    ],
    embedsrcs = ["version_manifest.json"],
    importpath = "github.com/omargallob/devops-starter/internal/tui",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/installer",
        "//internal/state",
        "//internal/updater",
        "//pkg/tooldef",
        "@com_github_charmbracelet_bubbles//spinner",
        "@com_github_charmbracelet_bubbles//textinput",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
    ],
)

go_test(
    name = "tui_test",
    srcs = [
        "setup_test.go",
        "tui_test.go",
    ],
    embed = [":tui"],
    deps = [
        "//internal/config",
        "//internal/state",
        "//pkg/tooldef",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
    ],
)
