load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "updater",
    srcs = [
        "rewrite.go",
        "selfupdate.go",
        "updater.go",
    ],
    importpath = "github.com/omargallob/devops-starter/internal/updater",
    visibility = [
        "//cmd:__subpackages__",
        "//internal:__subpackages__",
    ],
    deps = [
        "//pkg/tooldef",
    ],
)

go_test(
    name = "updater_test",
    srcs = [
        "selfupdate_test.go",
        "updater_test.go",
    ],
    embed = [":updater"],
    deps = [
        "//pkg/tooldef",
    ],
)
